# SPDX-License-Identifier: GPL-2.0-or-later
# Copyright (C) 2023 SUSE LLC Andrea Cervesato <andrea.cervesato@suse.com>

new_tests = [
    'test01.c',
    'test02.c',
    'test03.c',
    'test04.c',
    'test05.c',
    'test06.c',
    'test07.c',
    'test08.c',
    'test09.c',
    'test11.c',
    'test13.c',
    'test14.c',
    'test15.c',
    'test19.c',
    'test20.c',
    'test22.c',
    'test_assert.c',
    'test_children_cleanup.c',
    'test_exec.c',
    'test_exec_child.c',
    'test_guarded_buf.c',
    'test_kconfig.c',
    'test_kconfig01.c',
    'test_kconfig02.c',
    'test_macros01.c',
    'test_macros02.c',
    'test_macros03.c',
    'test_macros04.c',
    'test_macros05.c',
    'test_macros06.c',
    'test_parse_filesize.c',
    'test_runtime01.c',
    'test_runtime02.c',
    'test_timer.c',
    'test_zero_hugepage.c',
    'tst_bool_expr.c',
    'tst_capability01.c',
    'tst_capability02.c',
    'tst_cgroup01.c',
    'tst_cgroup02.c',
    'tst_device.c',
    'tst_expiration_timer.c',
    'tst_fuzzy_sync01.c',
    'tst_fuzzy_sync02.c',
    'tst_fuzzy_sync03.c',
    'tst_needs_cmds01.c',
    'tst_needs_cmds02.c',
    'tst_needs_cmds03.c',
    'tst_needs_cmds04.c',
    'tst_needs_cmds05.c',
    'tst_needs_cmds06.c',
    'tst_needs_cmds07.c',
    'tst_needs_cmds08.c',
    'tst_print_result.c',
    'tst_res_hexd.c',
    'tst_safe_fileops.c',
    'tst_strstatus.c',
    'variant.c',
]

foreach src : new_tests
    bin = src.split('.')[0]
    exe = executable(
        bin,
        src,
        include_directories : include_dir,
        dependencies: thread_dep,
        link_args : ['-lrt'],
        link_with : lib_ltp,
    )
    test(bin, exe)
endforeach
